Fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -277,10 +277,6 @@ img{
 
 @media(max-width: 918px){
 
-    body{
-        overflow-x: hidden;
-    }
-
     .navbar{   
         flex-direction: column;
     }
@@ -328,3 +324,8 @@ img{
     }
 }
 
+@media(max-width: 460px){
+    body{
+        overflow-x: hidden;
+    }
+}
